// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Symbol /> from .bob file use arrayIndex to find index if value is an array 1`] = `
<DocumentFragment>
  <div
    style="overflow: hidden; text-align: left; width: 100%; height: 100%;"
  >
    <img
      src="img 3.svg"
      style="width: 100%; height: 100%; display: block; transform: rotate(0deg) scaleX(1) scaleY(1); object-fit: fill;"
    />
  </div>
</DocumentFragment>
`;

exports[`<Symbol /> from .bob file use fallbackSymbol if index out of range or no symbol provided 1`] = `
<DocumentFragment>
  <div
    style="overflow: hidden; text-align: left; width: 100%; height: 100%;"
  >
    <img
      src="https://cs-web-symbol.diamond.ac.uk/catalogue/default.svg"
      style="width: 100%; height: 100%; display: block; transform: rotate(0deg) scaleX(1) scaleY(1); object-fit: fill;"
    />
  </div>
</DocumentFragment>
`;

exports[`<Symbol /> from .bob file use initialIndex if no props value provided 1`] = `
<DocumentFragment>
  <div
    style="overflow: hidden; text-align: left; width: 100%; height: 100%;"
  >
    <img
      src="img 3.svg"
      style="width: 100%; height: 100%; display: block; transform: rotate(0deg) scaleX(1) scaleY(1); object-fit: fill;"
    />
  </div>
  <div
    style="justify-content: center; align-content: center;"
  >
    <span
      style="height: 30px; width: 30px; border-radius: 50%; background-color: black; border: 1px solid white; color: white; position: absolute; top: calc(50% - 15px); left: calc(50% - 15px); text-align: center;"
    >
      <b>
        2
      </b>
    </span>
  </div>
</DocumentFragment>
`;

exports[`<Symbol /> from .opi file matches snapshot 1`] = `
<DocumentFragment>
  <div
    style="overflow: hidden; text-align: left; width: 100%; height: 100%;"
  >
    <img
      src="img 1.gif"
      style="width: 100%; height: 100%; display: block; transform: rotate(0deg) scaleX(1) scaleY(1); object-fit: fill;"
    />
  </div>
  <div
    style="background-color: transparent; position: absolute; height: 100%; width: 100%; top: 0px; left: 0px; display: flex; align-items: center; justify-content: center;"
  >
    <div
      style="padding: 5%;"
    >
      <div
        class="Label _Label_c35983"
        style="background-color: transparent; cursor: default; justify-content: flex-start; align-items: flex-start;"
      >
        <span>
           Fake value 
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
